First working version of MosaicImageReader - still needs more work. Minor cleaning in other packages as a side effect.
git-svn-id: https://svn.osgeo.org/geotools/geotools/trunk@28290 e5c1c795-43da-0310-a71f-fac65c449510